samples/libusb-sphinxdoc/_sources/enum_libusb_error.rst.txt
.. index:: pair: enum; libusb_error
.. _doxid-group__libusb__misc_1gab2323aa0f04bc22038e7e1740b2f29ef:

enum libusb_error
=================

Overview
~~~~~~~~

Error codes. :ref:`More...<details-group__libusb__misc_1gab2323aa0f04bc22038e7e1740b2f29ef>`

.. ref-code-block:: c
	:class: doxyrest-overview-code-block

	#include <libusb.h>

	enum libusb_error {
	    :ref:`LIBUSB_SUCCESS<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa576d8d63f6e24b2e57cb2ca63b304f15>`             = 0,
	    :ref:`LIBUSB_ERROR_IO<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa790feab8b45d8c323038f4d7d15eceec>`            = -1,
	    :ref:`LIBUSB_ERROR_INVALID_PARAM<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa680e4bf39b66a36be3182be3ebf58062>` = -2,
	    :ref:`LIBUSB_ERROR_ACCESS<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa131f3c2f6f2bb40bc6fb60ccb6f3152f>`        = -3,
	    :ref:`LIBUSB_ERROR_NO_DEVICE<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efaf8d98f464314a8e202507a0e5c67336f>`     = -4,
	    :ref:`LIBUSB_ERROR_NOT_FOUND<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa28214194dc4399e51777408b2c27f03f>`     = -5,
	    :ref:`LIBUSB_ERROR_BUSY<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa34ede1140a8a16022f730ac80875ed3b>`          = -6,
	    :ref:`LIBUSB_ERROR_TIMEOUT<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa9b000ac2e6dc4ac864c59579dd08c8bd>`       = -7,
	    :ref:`LIBUSB_ERROR_OVERFLOW<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efaf00ae4b8772fda64263ae6e4d6569af0>`      = -8,
	    :ref:`LIBUSB_ERROR_PIPE<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa1406e98370900156484f5fe609270837>`          = -9,
	    :ref:`LIBUSB_ERROR_INTERRUPTED<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa39c9284a18fb3277696d84d65f50dbea>`   = -10,
	    :ref:`LIBUSB_ERROR_NO_MEM<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efaff885c8ef4522f22f6673059c7b9edec>`        = -11,
	    :ref:`LIBUSB_ERROR_NOT_SUPPORTED<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa01b43115484f435627be755d5dc9509b>` = -12,
	    :ref:`LIBUSB_ERROR_OTHER<doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa9705eb232d1a5e249926d4e76599672e>`         = -99,
	};

.. _details-group__libusb__misc_1gab2323aa0f04bc22038e7e1740b2f29ef:

Detailed Documentation
~~~~~~~~~~~~~~~~~~~~~~

Error codes.

Most libusb functions return 0 on success or one of these codes on failure. You can call :ref:`libusb_error_name() <doxid-group__libusb__misc_1gacf319b823a1a1a25cc934d80db2f28c7>` to retrieve a string representation of an error code or :ref:`libusb_strerror() <doxid-group__libusb__misc_1gab977153d03d867a8b228a5921edaf457>` to get an end-user suitable description of an error code.

Enum Values
-----------

.. index:: pair: enumvalue; LIBUSB_SUCCESS
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa576d8d63f6e24b2e57cb2ca63b304f15:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_SUCCESS

Success (no error)

.. index:: pair: enumvalue; LIBUSB_ERROR_IO
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa790feab8b45d8c323038f4d7d15eceec:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_IO

Input/output error.

.. index:: pair: enumvalue; LIBUSB_ERROR_INVALID_PARAM
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa680e4bf39b66a36be3182be3ebf58062:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_INVALID_PARAM

Invalid parameter.

.. index:: pair: enumvalue; LIBUSB_ERROR_ACCESS
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa131f3c2f6f2bb40bc6fb60ccb6f3152f:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_ACCESS

Access denied (insufficient permissions)

.. index:: pair: enumvalue; LIBUSB_ERROR_NO_DEVICE
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efaf8d98f464314a8e202507a0e5c67336f:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_NO_DEVICE

No such device (it may have been disconnected)

.. index:: pair: enumvalue; LIBUSB_ERROR_NOT_FOUND
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa28214194dc4399e51777408b2c27f03f:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_NOT_FOUND

Entity not found.

.. index:: pair: enumvalue; LIBUSB_ERROR_BUSY
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa34ede1140a8a16022f730ac80875ed3b:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_BUSY

Resource busy.

.. index:: pair: enumvalue; LIBUSB_ERROR_TIMEOUT
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa9b000ac2e6dc4ac864c59579dd08c8bd:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_TIMEOUT

Operation timed out.

.. index:: pair: enumvalue; LIBUSB_ERROR_OVERFLOW
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efaf00ae4b8772fda64263ae6e4d6569af0:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_OVERFLOW

Overflow.

.. index:: pair: enumvalue; LIBUSB_ERROR_PIPE
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa1406e98370900156484f5fe609270837:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_PIPE

Pipe error.

.. index:: pair: enumvalue; LIBUSB_ERROR_INTERRUPTED
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa39c9284a18fb3277696d84d65f50dbea:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_INTERRUPTED

System call interrupted (perhaps due to signal)

.. index:: pair: enumvalue; LIBUSB_ERROR_NO_MEM
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efaff885c8ef4522f22f6673059c7b9edec:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_NO_MEM

Insufficient memory.

.. index:: pair: enumvalue; LIBUSB_ERROR_NOT_SUPPORTED
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa01b43115484f435627be755d5dc9509b:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_NOT_SUPPORTED

Operation not supported or unimplemented on this platform.

.. index:: pair: enumvalue; LIBUSB_ERROR_OTHER
.. _doxid-group__libusb__misc_1ggab2323aa0f04bc22038e7e1740b2f29efa9705eb232d1a5e249926d4e76599672e:

.. ref-code-block:: c
	:class: doxyrest-title-code-block

	LIBUSB_ERROR_OTHER

Other error.

